@@ -1,5 +1,7 @@
 *SVN*
 
+* Quickref for association methods.  #7723 [marclove, Mindsweeper]
+
 * Calculations: return nil average instead of 0 when there are no rows to average.  #8298 [davidw]
 
 * acts_as_nested_set: direct_children is sorted correctly.  #4761 [Josh Peek, rails@33lc0.net]
